final code demo commits

--- a/day-28/cfgram-auth/app/index.html
+++ b/day-28/cfgram-auth/app/index.html
@@ -17,6 +17,8 @@
     </main>
     <footer>
 
+      <!-- step 104 -->
+      <social-icons title="social icons title"></social-icons>
     </footer>
   </body>
 </html>
